Refs #17 (Complex filtering)
- Filtering working now (it seems)

- Layout (rather) Ok

- Replaced 'var' with 'let' in javascript (as per 'new' ECMAscript specifications)

Didn't look at the graphs as these are reworked now.

--- a/openrem/remapp/static/css/openrem-extra.css
+++ b/openrem/remapp/static/css/openrem-extra.css
@@ -22,6 +22,11 @@ table.row-clickable tbody tr th {
     background-color: #d9edf7;
 }
 
+table.header-background tbody tr th {
+    background-color: #d9edf7;
+
+}
+
 a.sorting-option {
     text-decoration: none;
     cursor: pointer;
