Changed chart average choice to be mean, median, boxplot. Implemented for all modalities. Ensuring the frequency charts are sorted in the same way as any existing average charts. References issue #477

--- a/openrem/remapp/static/css/openrem-extra.css
+++ b/openrem/remapp/static/css/openrem-extra.css
@@ -389,3 +389,9 @@ canvas.marks {
 div.plotly_parent {
   min-width: 1000px;
 }
+
+ul.CheckboxSelectMultiple {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
