--- a/openrem/remapp/templates/remapp/displaychartoptions.html
+++ b/openrem/remapp/templates/remapp/displaychartoptions.html
@@ -49,9 +49,11 @@
                     {{ GeneralChartOptionsForm.plotColourMapChoice.label_tag }}
                     <ul class="RadioSelect">
                         {% for x, y in GeneralChartOptionsForm.fields.plotColourMapChoice.choices %}
-                            <li class="no-wrap">
-                                <input type="radio" name="plotColourMapChoice" value="{{ x }}" id="value_{{ forloop.counter0 }}" {% if GeneralChartOptionsForm.plotColourMapChoice.value == x %}checked{% endif %}>&nbsp<img src="{{ STATIC_URL }}img/{{ x }}.png" alt="{{ y }}">
-                            </li>
+                            <label for="value_{{ forloop.counter0 }}">
+                                <li class="no-wrap">
+                                    <input type="radio" name="plotColourMapChoice" value="{{ x }}" id="value_{{ forloop.counter0 }}" {% if GeneralChartOptionsForm.plotColourMapChoice.value == x %}checked{% endif %}>&nbsp<img src="{{ STATIC_URL }}img/{{ x }}.png" alt="{{ y }}" width="150" height="15" class="colour_swatch">
+                                </li>
+                            </label>
                         {% endfor %}
                     </ul>
                 {% endif %}
