Addressing Codacy issues in chart_functions.py. Moved all imports to top of the file. Refactored error message into a method. Also now showing color map names next to the swatch on the chart options page. Refs issue #477

--- a/openrem/remapp/templates/remapp/displaychartoptions.html
+++ b/openrem/remapp/templates/remapp/displaychartoptions.html
@@ -51,7 +51,7 @@
                         {% for x, y in GeneralChartOptionsForm.fields.plotColourMapChoice.choices %}
                             <label for="value_{{ forloop.counter0 }}">
                                 <li class="no-wrap">
-                                    <input type="radio" name="plotColourMapChoice" value="{{ x }}" id="value_{{ forloop.counter0 }}" {% if GeneralChartOptionsForm.plotColourMapChoice.value == x %}checked{% endif %}>&nbsp<img src="{{ STATIC_URL }}img/{{ x }}.png" alt="{{ y }}" width="150" height="15" class="colour_swatch">
+                                    <input type="radio" name="plotColourMapChoice" value="{{ x }}" id="value_{{ forloop.counter0 }}" {% if GeneralChartOptionsForm.plotColourMapChoice.value == x %}checked{% endif %}>&nbsp<img src="{{ STATIC_URL }}img/{{ x }}.png" alt="{{ y }}" width="150" height="15" class="colour_swatch"> {{ x }}
                                 </li>
                             </label>
                         {% endfor %}
