Tidying up status message display, plus link to summary page. Refs #860

--- a/openrem/remapp/templates/remapp/dicomqr.html
+++ b/openrem/remapp/templates/remapp/dicomqr.html
@@ -139,8 +139,7 @@
   <div class="row">
     <hr>
     <div class="col-md-4 col-md-offset-4">
-      <a class="btn btn-default btn-block" href="{% url 'dicom_summary' %}" role="button">Start, stop and modify DICOM
-        nodes</a>
+      <a class="btn btn-default btn-block" href="{% url 'dicom_summary' %}" role="button">Modify DICOM nodes</a>
     </div>
   </div>
   <script src="{{ STATIC_URL }}js/datepicker.js"></script>
